clang/test/BSC/Negative/Trait/r1/definition_8/definition_8.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

trait F {
  int foo(This* this);
};

int int::foo(int* this) {
  return 0;
}

impl trait F for int;

trait F* get(trait F* f) {
  return f;
};

int main() {
  int a = 1;
  int b = get(&a); // expected-error {{initializing 'int' with an expression of incompatible type 'trait F *'}}
  return 0;
}
